fixed z-index bug

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
 	position: relative;
 	margin: 20% auto 0;
 	text-align: center;
+	z-index: 4;
 }
 
 /* ============================================ */
@@ -55,7 +56,7 @@ body {
 	line-height: 28px;
 	letter-spacing: 2px;
 	font-weight: 400;
-	color: rgb(36, 30, 30);
+	color: rgb(59, 56, 56);
 	cursor: pointer;
 	font-family: 'Roboto', sans-serif;
 	margin: 0 auto;
